force-app/main/default/objects/Request__c/Request__c.object-meta.xml
<CustomObject>
    <label>בקשה</label>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>בקשות</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>