force-app/main/default/objects/Request__c/fields/AboveMinimumWage__c.field-meta.xml
<CustomField>
    <fullName>AboveMinimumWage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>משכורת מעל שכר המינימום ב-10%</label>
    <type>Checkbox</type>
</CustomField>