force-app/main/default/objects/Request__c/fields/Account_Address_f__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_f__c</fullName>
    <formula>Account__r.BillingStreet  &amp; &quot; &quot; &amp;
Account__r.BillingCity &amp; &quot; &quot; &amp;
Account__r.BillingState &amp; &quot; &quot; &amp;
Account__r.BillingCountry &amp; &quot; &quot; &amp;
Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address f</label>
    <type>Text</type>
</CustomField>