force-app/main/default/objects/Request__c/fields/Account_Name_f__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_f__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name f</label>
    <type>Text</type>
</CustomField>