force-app/main/default/objects/Request__c/fields/Branch_Name_f__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name_f__c</fullName>
    <formula>Branch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Name f</label>
    <type>Text</type>
</CustomField>