force-app/main/default/objects/Request__c/fields/BusinesID_f__c.field-meta.xml
<CustomField>
    <fullName>BusinesID_f__c</fullName>
    <formula>Account__r.Business_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מספר ח.פ</label>
    <type>Text</type>
</CustomField>