force-app/main/default/objects/Request__c/fields/Business_Fields__c.field-meta.xml
<CustomField>
    <fullName>Business_Fields__c</fullName>
    <formula>TEXT(Account__r.Business_Fields__c)</formula>
    <label>ענף עסקי</label>
    <type>Text</type>
</CustomField>