force-app/main/default/objects/Request__c/fields/Business_Fields_f__c.field-meta.xml
<CustomField>
    <fullName>Business_Fields_f__c</fullName>
    <formula>TEXT(Account__r.Business_Fields__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Fields f</label>
    <type>Text</type>
</CustomField>