force-app/main/default/objects/Request__c/fields/BusinessID_R__c.field-meta.xml
<CustomField>
    <fullName>BusinessID_R__c</fullName>
    <label>עוסק מורשה/מספר ח.פ</label>
    <length>10</length>
    <type>Text</type>
</CustomField>