force-app/main/default/objects/Request__c/fields/CheckDuplicateFields__c.field-meta.xml
<CustomField>
    <fullName>CheckDuplicateFields__c</fullName>
    <formula>BusinessID_f__c &amp; &apos; - &apos; &amp; Job__c &amp; &apos; - &apos;&amp; Program__r.Name &amp; &apos; - &apos; &amp; Text(Employees__c) &amp; &apos; - &apos; &amp; Primary_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CheckDuplicateFields</label>
    <type>Text</type>
</CustomField>