force-app/main/default/objects/Request__c/fields/Closing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closing_Reason__c</fullName>
    <label>Closing Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>לא ניתן ליצור קשר</fullName>
            </value>
            <value>
                <fullName>המעסיק חזר בו מפנייתו</fullName>
            </value>
            <value>
                <fullName>לא נמצאה תוכנית מתאימה</fullName>
            </value>
            <value>
                <fullName>בקשה כפולה</fullName>
            </value>
            <value>
                <fullName>לא רלוונטי</fullName>
            </value>
            <value>
                <fullName>הועבר לטיפול בתוכנית</fullName>
                <label>מיפוי בוצע בהצלחה</label>
            </value>
            <value>
                <fullName>הועבר לטיפול המפעיל</fullName>
                <isActive>false</isActive>
                <label>הועבר לטיפול המפעיל</label>
            </value>
            <value>
                <fullName>הועבר למילוי טפסים</fullName>
                <isActive>false</isActive>
                <label>הועבר למילוי טפסים</label>
            </value>
            <value>
                <fullName>לא ניתנה המלצה</fullName>
                <isActive>false</isActive>
                <label>לא ניתנה המלצה</label>
            </value>
            <value>
                <fullName>נתונים שגויים</fullName>
                <isActive>false</isActive>
                <label>נתונים שגויים</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>