force-app/main/default/objects/Request__c/fields/Closing_Reason_notes__c.field-meta.xml
<CustomField>
    <fullName>Closing_Reason_notes__c</fullName>
    <label>Closing Reason notes</label>
    <type>TextArea</type>
</CustomField>