force-app/main/default/objects/Request__c/fields/Contact_Department__c.field-meta.xml
<CustomField>
    <fullName>Contact_Department__c</fullName>
    <label>מחלקה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מחלקת שיווק</fullName>
            </value>
            <value>
                <fullName>מחלקת משאבי אנוש</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>