force-app/main/default/objects/Request__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <label>שם איש קשר</label>
    <length>50</length>
    <type>Text</type>
</CustomField>