force-app/main/default/objects/Request__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <label>טלפון איש קשר</label>
    <type>Phone</type>
</CustomField>