force-app/main/default/objects/Request__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>תפקיד</label>
    <length>100</length>
    <type>Text</type>
</CustomField>