force-app/main/default/objects/Request__c/fields/contactmail__c.field-meta.xml
<CustomField>
    <fullName>contactmail__c</fullName>
    <formula>Primary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מייל איש קשר</label>
    <type>Text</type>
</CustomField>