force-app/main/default/objects/Request__c/fields/Date_Close_Request__c.field-meta.xml
<CustomField>
    <fullName>Date_Close_Request__c</fullName>
    <label>תאריך סגירת בקשה</label>
    <type>DateTime</type>
</CustomField>