force-app/main/default/objects/Request__c/fields/Date_Closing__c.field-meta.xml
<CustomField>
    <fullName>Date_Closing__c</fullName>
    <label>תאריך בקשה סגורה</label>
    <type>DateTime</type>
</CustomField>