force-app/main/default/objects/Request__c/fields/Date_Needs_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Date_Needs_Mapping__c</fullName>
    <label>תאריך מיפוי צרכים</label>
    <type>DateTime</type>
</CustomField>