force-app/main/default/objects/Request__c/fields/Date_Program_Request__c.field-meta.xml
<CustomField>
    <fullName>Date_Program_Request__c</fullName>
    <label>תאריך המלצה לתוכנית</label>
    <type>DateTime</type>
</CustomField>