force-app/main/default/objects/Request__c/fields/Diff_Dates_Complete_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Diff_Dates_Complete_Mapping__c</fullName>
    <formula>IF (FLOOR((Date_Needs_Mapping__c- Date_Complete_Info__c )) &gt; 0, TEXT(FLOOR((Date_Needs_Mapping__c - Date_Complete_Info__c )) ) &amp; &quot; ימים &quot;, &quot;&quot;) &amp; IF(FLOOR(MOD((Date_Needs_Mapping__c- Date_Complete_Info__c )* 24, 24 )) &gt; 0, TEXT(FLOOR(MOD((Date_Needs_Mapping__c- Date_Complete_Info__c )* 24, 24 ))) &amp; &quot; שעות &quot;,&quot;&quot;)
&amp; TEXT(ROUND(MOD((Date_Needs_Mapping__c- Date_Complete_Info__c )* 24 * 60, 60 ), 0)) &amp; &quot; דקות &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>זמן שעבר עד מיפוי צרכים</label>
    <type>Text</type>
</CustomField>