force-app/main/default/objects/Request__c/fields/Diff_Dates_Complete_Program__c.field-meta.xml
<CustomField>
    <fullName>Diff_Dates_Complete_Program__c</fullName>
    <formula>IF (FLOOR((Date_Program_Request__c - Date_Needs_Mapping__c)) &gt; 0, TEXT(FLOOR((Date_Program_Request__c  - Date_Needs_Mapping__c)) ) &amp; &quot; ימים &quot;, &quot;&quot;)
&amp; IF(FLOOR(MOD((Date_Program_Request__c - Date_Needs_Mapping__c)* 24, 24 )) &gt; 0, TEXT(FLOOR(MOD((Date_Program_Request__c - Date_Needs_Mapping__c)* 24, 24 ))) &amp; &quot; שעות &quot;,&quot;&quot;)
&amp; TEXT(ROUND(MOD((Date_Program_Request__c - Date_Needs_Mapping__c)* 24 * 60, 60 ), 0)) &amp; &quot; דקות &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>זמן שעבר עד המלצה לתוכנית</label>
    <type>Text</type>
</CustomField>