force-app/main/default/objects/Request__c/fields/Diff_Dates_Open_To_Close__c.field-meta.xml
<CustomField>
    <fullName>Diff_Dates_Open_To_Close__c</fullName>
    <formula>IF (FLOOR((Date_Closing__c - CreatedDate )) &gt; 0, TEXT(FLOOR((Date_Closing__c - CreatedDate )) ) &amp; &quot; ימים &quot;, &quot;&quot;) 
&amp; IF(FLOOR(MOD((Date_Closing__c - CreatedDate )* 24, 24 )) &gt; 0, TEXT(FLOOR(MOD((Date_Closing__c - CreatedDate )* 24, 24 ))) &amp; &quot; שעות &quot;,&quot;&quot;)
&amp; TEXT(ROUND(MOD((Date_Closing__c - CreatedDate )* 24 * 60, 60 ), 0)) &amp; &quot; דקות &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>זמן תהליך טיפול כולל</label>
    <type>Text</type>
</CustomField>