force-app/main/default/objects/Request__c/fields/Diff_Dates_Program_Close_Request__c.field-meta.xml
<CustomField>
    <fullName>Diff_Dates_Program_Close_Request__c</fullName>
    <formula>IF (FLOOR((Date_Close_Request__c - Date_Program_Request__c)) &gt; 0, TEXT(FLOOR((Date_Close_Request__c  - Date_Program_Request__c)) ) &amp; &quot; ימים &quot;, &quot;&quot;)
&amp; IF(FLOOR(MOD((Date_Close_Request__c - Date_Program_Request__c)* 24, 24 )) &gt; 0, TEXT(FLOOR(MOD((Date_Close_Request__c - Date_Program_Request__c)* 24, 24 ))) &amp; &quot; שעות &quot;,&quot;&quot;)
&amp; TEXT(ROUND(MOD((Date_Close_Request__c - Date_Program_Request__c)* 24 * 60, 60 ), 0)) &amp; &quot; דקות &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>זמן שעבר עד סגירת בקשה</label>
    <type>Text</type>
</CustomField>