force-app/main/default/objects/Request__c/fields/Employees_Requested_Num__c.field-meta.xml
<CustomField>
    <fullName>Employees_Requested_Num__c</fullName>
    <label>Employees Requested Num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>