force-app/main/default/objects/Request__c/fields/Existing_Mentor__c.field-meta.xml
<CustomField>
    <fullName>Existing_Mentor__c</fullName>
    <label>Existing  Mentor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>לא ידוע</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
            <value>
                <fullName>כן</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>