force-app/main/default/objects/Request__c/fields/Expect_change_in_the_coming_years__c.field-meta.xml
<CustomField>
    <fullName>Expect_change_in_the_coming_years__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expect change in the coming years</label>
    <type>Checkbox</type>
</CustomField>