force-app/main/default/objects/Request__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>האם מקושר לבקשת אב</label>
    <type>Checkbox</type>
</CustomField>