force-app/main/default/objects/Request__c/fields/flag_closing_reason__c.field-meta.xml
<CustomField>
    <fullName>flag_closing_reason__c</fullName>
    <defaultValue>false</defaultValue>
    <label>flag closing reason</label>
    <type>Checkbox</type>
</CustomField>