force-app/main/default/objects/Request__c/fields/flag_maof_operator__c.field-meta.xml
<CustomField>
    <fullName>flag_maof_operator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>flag maof operator</label>
    <type>Checkbox</type>
</CustomField>