force-app/main/default/objects/Request__c/fields/Geographical_layout_f__c.field-meta.xml
<CustomField>
    <fullName>Geographical_layout_f__c</fullName>
    <formula>SUBSTITUTE(
IF(INCLUDES( Account__r.Geographical_layout__c , &quot;צפון&quot;), &quot;צפון, &quot; , NULL) +
IF(INCLUDES( Account__r.Geographical_layout__c , &quot;מרכז&quot;), &quot;מרכז, &quot; , NULL) +
IF(INCLUDES( Account__r.Geographical_layout__c , &quot;אזור ירושלים&quot;), &quot;אזור ירושלים, &quot; , NULL) +
IF(INCLUDES( Account__r.Geographical_layout__c , &quot;דרום&quot;), &quot;דרום, &quot; , NULL) +
IF(INCLUDES( Account__r.Geographical_layout__c , &quot;ארצי&quot;), &quot;ארצי, &quot; , NULL)+ &quot;.&quot;, &quot;, .&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geographical layout f</label>
    <type>Text</type>
</CustomField>