force-app/main/default/objects/Request__c/fields/Hiring_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Reason__c</fullName>
    <label>Hiring Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>גידול הפעילות</fullName>
            </value>
            <value>
                <fullName>תחלופת עובדים</fullName>
            </value>
            <value>
                <fullName>מחסור במיומנויות נדרשות לביצוע התפקיד</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
            <value>
                <fullName>מענה לחוסרים בעקבות מחלת הקורונה</fullName>
                <isActive>false</isActive>
                <label>מענה לחוסרים בעקבות מחלת הקורונה</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>