force-app/main/default/objects/Request__c/fields/Initiated_User_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Initiated_User_Recommendation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>המלצת רכז יזומה</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Requests (המלצת רכז יזומה)</relationshipLabel>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>