force-app/main/default/objects/Request__c/fields/Interested_In_Mentor__c.field-meta.xml
<CustomField>
    <fullName>Interested_In_Mentor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>מעוניין בחניכה בזמן ההכשרה</label>
    <type>Checkbox</type>
</CustomField>