force-app/main/default/objects/Request__c/fields/Job2__c.field-meta.xml
<CustomField>
    <fullName>Job2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ProfessionCourse__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Profession Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProfessionCourse__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>