force-app/main/default/objects/Request__c/fields/Job_Exists_In_The_Org__c.field-meta.xml
<CustomField>
    <fullName>Job_Exists_In_The_Org__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Exists In The Org</label>
    <type>Checkbox</type>
</CustomField>