force-app/main/default/objects/Request__c/fields/Known_Training_Organization__c.field-meta.xml
<CustomField>
    <fullName>Known_Training_Organization__c</fullName>
    <label>Known Training Organization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>לא ידוע</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
            <value>
                <fullName>כן</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>