force-app/main/default/objects/Request__c/fields/Licensing_type__c.field-meta.xml
<CustomField>
    <fullName>Licensing_type__c</fullName>
    <label>סוג רישוי</label>
    <length>100</length>
    <type>Text</type>
</CustomField>