force-app/main/default/objects/Request__c/fields/Link_to_Duplicate_request__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Duplicate_request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>הבקשה המקורית של הבקשה הכפולה</description>
    <label>בקשת מקור לבקשה כפולה</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>בקשות כפולות</relationshipLabel>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>