force-app/main/default/objects/Request__c/fields/Long_term_job__c.field-meta.xml
<CustomField>
    <fullName>Long_term_job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Long-term job</label>
    <type>Checkbox</type>
</CustomField>