force-app/main/default/objects/Request__c/fields/No_recommendation_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_recommendation_Reason__c</fullName>
    <label>No recommendation Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>