force-app/main/default/objects/Request__c/fields/On_Job_Training__c.field-meta.xml
<CustomField>
    <fullName>On_Job_Training__c</fullName>
    <label>On Job Training</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>לא ידוע</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
            <value>
                <fullName>כן</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>