force-app/main/default/objects/Request__c/fields/Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason__c</fullName>
    <description>במקרה שהמשתמש בחר &quot;אחר&quot; בסיבת גיוס עובדים, על הרכז למלא את הסיבה בשדה זה</description>
    <inlineHelpText>במקרה שהמשתמש בחר &quot;אחר&quot; בסיבת גיוס עובדים, על הרכז למלא את הסיבה בשדה זה</inlineHelpText>
    <label>Other Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>