force-app/main/default/objects/Request__c/fields/Personal_skills__c.field-meta.xml
<CustomField>
    <fullName>Personal_skills__c</fullName>
    <inlineHelpText>יש להתייחס לכישורים כגון: אישיותיים, מקצועיים וניהוליים</inlineHelpText>
    <label>Personal skills</label>
    <type>TextArea</type>
</CustomField>