force-app/main/default/objects/Request__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <formula>Primary_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>טלפון</label>
    <type>Text</type>
</CustomField>