force-app/main/default/objects/Request__c/fields/ProgramRequest_Exists__c.field-meta.xml
<CustomField>
    <fullName>ProgramRequest_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>האם נפתחה המלצה</label>
    <type>Checkbox</type>
</CustomField>