force-app/main/default/objects/Request__c/fields/ProgramRequestCount__c.field-meta.xml
<CustomField>
    <fullName>ProgramRequestCount__c</fullName>
    <label>ProgramRequestCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>