force-app/main/default/objects/Request__c/fields/Recognized_Training__c.field-meta.xml
<CustomField>
    <fullName>Recognized_Training__c</fullName>
    <label>האם קיימת תוכנית הכשרה מוכרת ע&quot;י האגף</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>לא ידוע</fullName>
            </value>
            <value>
                <fullName>לא</fullName>
            </value>
            <value>
                <fullName>כן</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>