force-app/main/default/objects/Request__c/fields/Recommendation_by_Initiated_request__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_by_Initiated_request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommendation by Initiated request</label>
    <type>Checkbox</type>
</CustomField>