force-app/main/default/objects/Request__c/fields/Recommendation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Summary__c</fullName>
    <label>Recommendation Summary</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>