force-app/main/default/objects/Request__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Request__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Parent_Request</value>
        </filterItems>
        <filterItems>
            <field>Request__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>