force-app/main/default/objects/Request__c/fields/Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Request_Details__c</fullName>
    <label>Request Details</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>