force-app/main/default/objects/Request__c/fields/Require_Licensing__c.field-meta.xml
<CustomField>
    <fullName>Require_Licensing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>האם התפקיד מחייב רישוי?</label>
    <type>Checkbox</type>
</CustomField>