force-app/main/default/objects/Request__c/fields/Required_languages__c.field-meta.xml
<CustomField>
    <fullName>Required_languages__c</fullName>
    <label>Required languages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>עברית</fullName>
            </value>
            <value>
                <fullName>ערבית</fullName>
            </value>
            <value>
                <fullName>אנגלית</fullName>
            </value>
            <value>
                <fullName>רוסית</fullName>
            </value>
            <value>
                <fullName>אמהרית</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>